# Django_Quizck

./: .breakpoints  README.md  db.sqlite3  pyproject.toml  requirements.txt
game/: urls.py  views.py
game/templates/: base.html  leaderboard.html  showQuiz.html  waiting.html
host/: admin.py  forms.py  models.py  tempppi  urls.py  views.py
host/migrations/: 0001_initial.py  0002_auto_20211015_1110.py  0003_auto_20211019_1204.py
host/templates/: base.html  createQuiz.html  dashboard.html  firebase.json  quizPage.html  stats.html
login/: admin.py  forms.py  models.py  urls.py  views.py
login/migrations/: 0001_initial.py  0002_auto_20211015_0746.py  0003_auto_20211015_0746.py  0004_auto_20211015_0748.py  0005_auto_20211015_0905.py  0006_auto_20211024_0845.py
login/templates/: base.html  email_confirmation.html  login.html  signup.html
mysite/: info.py  settings.py  urls.py
player/: forms.py  models.py  urls.py  views.py
player/migrations/: 0001_initial.py  0002_auto_20211015_0905.py  0003_player_banned.py
player/templates/: entergame.html
